feat_end: Can now edit UIElement in UIElementEditor, UIVisualizerPanel can resize windows; progress: Window in UIElementEditor; bug: Two Color editors

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=234,829
+Size=234,422
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,9 +27,9 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=236,86
-Size=1368,545
+Size=1364,541
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x0000000D,0
 
 [Window][##Window]
 Pos=100,100
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=236,52
-Size=1368,32
+Size=1364,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -220,7 +220,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=526,82
+Pos=598,84
 Size=549,680
 Collapsed=0
 
@@ -235,8 +235,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=51,33
-Size=623,474
+Pos=48,97
+Size=716,422
 Collapsed=0
 
 [Window][DockSpace Demo]
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,478
-Size=234,403
+Pos=0,476
+Size=234,401
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,10 +311,10 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1016,633
-Size=588,248
+Pos=1168,629
+Size=432,248
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000014,0
 
 [Window][UI Element Picker]
 Pos=0,387
@@ -323,24 +323,24 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=229,52
-Size=1375,579
+Pos=224,52
+Size=942,575
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x0000000D,0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
-Size=498,176
+Size=498,180
 
 [Window][Dear ImGui Demo/Red_1D4E05CE]
 IsChild=1
-Size=200,100
+Size=132,76
 
 [Window][Content Browser]
-Pos=229,633
-Size=785,248
+Pos=224,629
+Size=942,248
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000013,0
 
 [Window][Create Entity with MeshComponent]
 Pos=708,386
@@ -65214,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=227,829
+Size=222,825
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65224,14 +65224,14 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1304,52
-Size=300,579
+Pos=1168,52
+Size=432,575
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x0000000E,0
 
 [Window][UI Visualizer/Window1_AA32A23C]
 IsChild=1
-Size=412,401
+Size=360,263
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65387,11 +65387,11 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=164,239 Size=1604,829 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=227,829 Split=Y Selected=0x09C8B3D2
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=1099,829 Split=X
+  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
     DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
       DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=234,829 Split=Y Selected=0x2E9237F7
         DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=276,424 Selected=0x2E9237F7
@@ -65401,11 +65401,11 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=164,239 Size=1604,82
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,575 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x00000013 Parent=0x0000000F SizeRef=1073,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode  ID=0x00000014 Parent=0x0000000F SizeRef=300,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,248 Split=X Selected=0x2323D3E4
-              DockNode  ID=0x0000000D Parent=0x00000010 SizeRef=785,264 Selected=0xBF096F38
-              DockNode  ID=0x0000000E Parent=0x00000010 SizeRef=588,264 Selected=0x2323D3E4
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=942,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+              DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=432,575 Selected=0xFC56E895
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,248 Split=X Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=942,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=432,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
