--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=234,422
+Size=408,1009
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000001,0
 
 [Window][Panels]
 ViewportPos=222,295
@@ -29,7 +29,7 @@ Collapsed=0
 Pos=236,86
 Size=1364,541
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000005,0
 
 [Window][##Window]
 Pos=100,100
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=236,52
-Size=1364,32
+Pos=410,52
+Size=1510,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -293,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,476
-Size=234,401
+Pos=1529,86
+Size=391,691
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1168,629
-Size=432,248
+Pos=1326,783
+Size=594,278
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,9 +324,9 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=942,575
+Size=1696,729
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=224,629
-Size=942,248
+Pos=224,783
+Size=1100,278
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,825
+Size=222,1009
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65224,14 +65224,38 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1168,52
-Size=432,575
+Pos=1512,52
+Size=408,725
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Visualizer/Window1_AA32A23C]
 IsChild=1
-Size=360,263
+Size=796,402
+
+[Window][Add New Window]
+Pos=84,-170
+Size=215,97
+Collapsed=0
+
+[Window][Add New Window to Window1]
+Pos=861,484
+Size=330,114
+Collapsed=0
+
+[Window][Add New Button to Window2]
+Pos=593,216
+Size=197,92
+Collapsed=0
+
+[Window][Add New Button]
+Pos=861,482
+Size=197,92
+Collapsed=0
+
+[Window][UI Visualizer/Window1_AA32A23C/Window2_9C128843]
+IsChild=1
+Size=210,119
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65386,26 +65410,26 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
-    DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
-    DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
-    DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=234,829 Split=Y Selected=0x2E9237F7
-        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=276,424 Selected=0x2E9237F7
-        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=276,403 Selected=0xF4B38336
-      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1368,829 Split=Y
-        DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-        DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
-          DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,575 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=942,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-              DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=432,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,248 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=942,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=432,248 Selected=0x2323D3E4
-          DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
-    DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1920,1009 Split=X Selected=0xBDDC88E0
+  DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
+    DockNode              ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+    DockNode              ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+  DockNode                ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
+    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
+      DockNode            ID=0x00000001 Parent=0x00000009 SizeRef=408,829 Selected=0x2E9237F7
+      DockNode            ID=0x00000002 Parent=0x00000009 SizeRef=1510,829 Split=Y
+        DockNode          ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+        DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
+          DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+            DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,691 Split=X Selected=0xF6FF0623
+              DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1286,575 Split=X Selected=0xF6FF0623
+                DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1117,721 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+                DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=391,721 Selected=0xF4B38336
+              DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=408,575 Selected=0xFC56E895
+            DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,278 Split=X Selected=0xBF096F38
+              DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=979,248 Selected=0xBF096F38
+              DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=529,248 Selected=0x2323D3E4
+          DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
+    DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
