--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -53,7 +53,7 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-Pos=373,186
+Pos=92,133
 Size=700,73
 Collapsed=0
 
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1326,783
-Size=594,278
+Pos=1118,650
+Size=482,227
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=1696,729
+Size=970,596
 Collapsed=0
 DockId=0x00000005,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=224,783
-Size=1100,278
+Pos=224,650
+Size=892,227
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65208,13 +65208,13 @@ Size=409,894
 Collapsed=0
 
 [Window][Create Image or Button]
-Pos=780,482
+Pos=657,356
 Size=389,116
 Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,1009
+Size=222,825
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65224,8 +65224,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1512,52
-Size=408,725
+Pos=1196,52
+Size=404,596
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65256,6 +65256,11 @@ Collapsed=0
 [Window][UI Visualizer/Window1_AA32A23C/Window2_9C128843]
 IsChild=1
 Size=210,119
+
+[Window][Add New Text]
+Pos=712,394
+Size=297,101
+Collapsed=0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65411,7 +65416,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1920,1009 Split=X Selected=0xBDDC88E0
+DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
   DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode              ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode              ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -65422,12 +65427,12 @@ DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1920,
         DockNode          ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,691 Split=X Selected=0xF6FF0623
-              DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=1286,575 Split=X Selected=0xF6FF0623
+            DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,596 Split=X Selected=0xF6FF0623
+              DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=970,575 Split=X Selected=0xF6FF0623
                 DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1117,721 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
                 DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=391,721 Selected=0xF4B38336
-              DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=408,575 Selected=0xFC56E895
-            DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,278 Split=X Selected=0xBF096F38
+              DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=404,575 Selected=0xFC56E895
+            DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,227 Split=X Selected=0xBF096F38
               DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=979,248 Selected=0xBF096F38
               DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=529,248 Selected=0x2323D3E4
           DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
