--- a/imgui.ini
+++ b/imgui.ini
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1118,650
-Size=482,227
+Pos=1022,650
+Size=578,227
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=970,596
+Size=993,596
 Collapsed=0
 DockId=0x00000005,0
 
@@ -338,7 +338,7 @@ Size=132,76
 
 [Window][Content Browser]
 Pos=224,650
-Size=892,227
+Size=796,227
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65224,14 +65224,14 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1196,52
-Size=404,596
+Pos=1219,52
+Size=381,596
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Visualizer/Window1_AA32A23C]
 IsChild=1
-Size=796,402
+Size=521,402
 
 [Window][Add New Window]
 Pos=84,-170
@@ -65260,6 +65260,11 @@ Size=210,119
 [Window][Add New Text]
 Pos=712,394
 Size=297,101
+Collapsed=0
+
+[Window][Add New Button to Window1]
+Pos=701,392
+Size=197,92
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -65428,13 +65433,13 @@ DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825
         DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
             DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,596 Split=X Selected=0xF6FF0623
-              DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=970,575 Split=X Selected=0xF6FF0623
+              DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=993,575 Split=X Selected=0xF6FF0623
                 DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1117,721 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
                 DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=391,721 Selected=0xF4B38336
-              DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=404,575 Selected=0xFC56E895
+              DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=381,575 Selected=0xFC56E895
             DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,227 Split=X Selected=0xBF096F38
-              DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=979,248 Selected=0xBF096F38
-              DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=529,248 Selected=0x2323D3E4
+              DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=796,248 Selected=0xBF096F38
+              DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=578,248 Selected=0x2323D3E4
           DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
