progress: Lighting demo

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,18 +1,17 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1600,877
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=81,187
+Pos=11,117
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=408,1009
+Size=374,615
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Panels]
 ViewportPos=222,295
@@ -26,10 +25,10 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=236,86
-Size=1364,541
+Pos=376,86
+Size=1224,562
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000D,0
 
 [Window][##Window]
 Pos=100,100
@@ -37,8 +36,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=410,52
-Size=1510,32
+Pos=376,52
+Size=1224,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -58,7 +57,7 @@ Size=700,73
 Collapsed=0
 
 [Window][Debug]
-Pos=142,270
+Pos=1164,286
 Size=297,412
 Collapsed=0
 
@@ -196,7 +195,7 @@ Collapsed=0
 
 [Window][Spotlight]
 Pos=78,86
-Size=387,96
+Size=301,173
 Collapsed=0
 
 [Window][Window1]
@@ -293,8 +292,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1529,86
-Size=391,691
+Pos=0,669
+Size=374,208
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +310,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1022,650
-Size=578,227
+Pos=949,654
+Size=655,227
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,9 +323,9 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=993,596
+Size=1005,596
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000D,0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
@@ -337,8 +336,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=224,650
-Size=796,227
+Pos=0,654
+Size=947,227
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65224,8 +65223,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1219,52
-Size=381,596
+Pos=1231,52
+Size=369,596
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65239,7 +65238,7 @@ Size=215,97
 Collapsed=0
 
 [Window][Add New Window to Window1]
-Pos=861,484
+Pos=775,398
 Size=330,114
 Collapsed=0
 
@@ -65266,6 +65265,10 @@ Collapsed=0
 Pos=701,392
 Size=197,92
 Collapsed=0
+
+[Window][UI Visualizer/Window1_AA32A23C/SubWindow_AC3CDF66]
+IsChild=1
+Size=182,105
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65420,26 +65423,26 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace                 ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace                 ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
-  DockNode                ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
-    DockNode              ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
-    DockNode              ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-  DockNode                ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
-    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode            ID=0x00000001 Parent=0x00000009 SizeRef=408,829 Selected=0x2E9237F7
-      DockNode            ID=0x00000002 Parent=0x00000009 SizeRef=1510,829 Split=Y
-        DockNode          ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-        DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
-          DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode      ID=0x0000000F Parent=0x00000007 SizeRef=1029,596 Split=X Selected=0xF6FF0623
-              DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=993,575 Split=X Selected=0xF6FF0623
-                DockNode  ID=0x00000005 Parent=0x0000000D SizeRef=1117,721 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
-                DockNode  ID=0x00000006 Parent=0x0000000D SizeRef=391,721 Selected=0xF4B38336
-              DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=381,575 Selected=0xFC56E895
-            DockNode      ID=0x00000010 Parent=0x00000007 SizeRef=1029,227 Split=X Selected=0xBF096F38
-              DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=796,248 Selected=0xBF096F38
-              DockNode    ID=0x00000014 Parent=0x00000010 SizeRef=578,248 Selected=0x2323D3E4
-          DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
-    DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace               ID=0xF15DEC6E Pos=34,109 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
+    DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+    DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+  DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
+    DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
+      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=374,829 Split=Y Selected=0x2E9237F7
+        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,615 Selected=0x2E9237F7
+        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=226,208 Selected=0xF4B38336
+      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1224,829 Split=Y
+        DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+        DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
+          DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,596 Split=X Selected=0xF6FF0623
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,227 Split=X Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=722,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=500,248 Selected=0x2323D3E4
+          DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
+    DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
