--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1604,881
+Pos=0,0
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -36,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=376,52
-Size=1224,32
+Pos=0,52
+Size=1600,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -310,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=949,654
-Size=655,227
+Pos=1038,650
+Size=562,227
 Collapsed=0
 DockId=0x00000014,0
 
@@ -336,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,654
-Size=947,227
+Pos=224,650
+Size=812,227
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65270,6 +65271,10 @@ Collapsed=0
 IsChild=1
 Size=182,105
 
+[Window][UI Visualizer/Window2_333BF386]
+IsChild=1
+Size=250,250
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -65424,7 +65429,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Pos=34,109 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
