feat_end: Scoped Traverse function in UIPage, UIVisualizerPanel now displays new windows correctly

--- a/imgui.ini
+++ b/imgui.ini
@@ -65231,10 +65231,10 @@ DockId=0x0000000E,0
 
 [Window][UI Visualizer/Window1_AA32A23C]
 IsChild=1
-Size=521,402
+Size=656,402
 
 [Window][Add New Window]
-Pos=575,381
+Pos=463,269
 Size=215,97
 Collapsed=0
 
@@ -65245,7 +65245,7 @@ Collapsed=0
 
 [Window][Add New Button to Window2]
 Pos=593,216
-Size=197,92
+Size=279,147
 Collapsed=0
 
 [Window][Add New Button]
@@ -65273,7 +65273,16 @@ Size=182,105
 
 [Window][UI Visualizer/Window2_333BF386]
 IsChild=1
-Size=250,250
+Size=249,250
+
+[Window][Add New Window to Window2]
+Pos=861,482
+Size=197,92
+Collapsed=0
+
+[Window][UI Visualizer/Window2_333BF386/SubWindow1_B4DC08E6]
+IsChild=1
+Size=61,32
 
 [Table][0xF9AA59E3,4]
 RefScale=18
