progress: SceneRenderer and Runtime

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -311,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1227,830
-Size=693,227
+Pos=949,654
+Size=655,227
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=1325,776
+Size=1005,596
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -337,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=224,830
-Size=1001,227
+Pos=0,654
+Size=947,227
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,1005
+Size=222,825
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65224,14 +65224,14 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1551,52
-Size=369,776
+Pos=1231,52
+Size=369,596
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][UI Visualizer/Window1_AA32A23C]
 IsChild=1
-Size=656,402
+Size=656,493
 
 [Window][Add New Window]
 Pos=463,269
@@ -65283,6 +65283,20 @@ Collapsed=0
 [Window][UI Visualizer/Window2_333BF386/SubWindow1_B4DC08E6]
 IsChild=1
 Size=61,32
+
+[Window][UI Visualizer/Window1_AA32A23C/SubWindow1_27A11705]
+IsChild=1
+Size=100,32
+
+[Window][Add New Text to Window1]
+Pos=858,265
+Size=180,92
+Collapsed=0
+
+[Window][Add New Text to Button1]
+Pos=1024,402
+Size=180,92
+Collapsed=0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -65438,7 +65452,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
