--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1920,1061
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +9,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=374,750
+Size=295,563
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,8 +25,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=376,86
-Size=1544,742
+Pos=297,86
+Size=1303,562
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -37,8 +36,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=376,52
-Size=1544,32
+Pos=297,52
+Size=1303,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -200,8 +199,8 @@ Size=301,173
 Collapsed=0
 
 [Window][Window1]
-Pos=20,20
-Size=90,60
+Pos=822,460
+Size=600,300
 Collapsed=0
 
 [Window][Properties]
@@ -293,8 +292,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,804
-Size=374,253
+Pos=0,617
+Size=295,260
 Collapsed=0
 DockId=0x00000006,0
 
@@ -311,8 +310,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1135,834
-Size=785,227
+Pos=1100,650
+Size=500,227
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +336,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=0,834
-Size=1133,227
+Pos=297,650
+Size=801,227
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65452,16 +65451,16 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=60,135 Size=1920,1009 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
     DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=374,829 Split=Y Selected=0x2E9237F7
-        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,615 Selected=0x2E9237F7
-        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=226,208 Selected=0xF4B38336
-      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1224,829 Split=Y
+      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=295,829 Split=Y Selected=0x2E9237F7
+        DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
+        DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=226,260 Selected=0xF4B38336
+      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1303,829 Split=Y
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
@@ -65469,7 +65468,7 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=60,135 Size=1920,100
               DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
             DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,227 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=722,248 Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=801,248 Selected=0xBF096F38
               DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=500,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
