progress: SceneVisualizerPanel::Renderer

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1600,877
+Pos=0,0
+Size=1604,880
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=295,563
+Size=295,828
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=297,86
-Size=1303,562
+Size=1307,565
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -37,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=297,52
-Size=1303,32
+Size=1307,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -292,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,617
-Size=295,260
+Pos=0,620
+Size=295,261
 Collapsed=0
 DockId=0x00000006,0
 
@@ -310,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1100,650
-Size=500,227
+Pos=1102,653
+Size=502,227
 Collapsed=0
 DockId=0x00000014,0
 
@@ -323,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=1005,596
+Size=1380,600
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -336,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=297,650
-Size=801,227
+Pos=297,653
+Size=803,227
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65213,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,825
+Size=222,829
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65223,8 +65224,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1231,52
-Size=369,596
+Pos=1487,116
+Size=369,600
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65451,7 +65452,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=199,107 Size=1604,828 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
