--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1920,1057
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +9,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=367,686
+Size=243,829
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,8 +25,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=369,86
-Size=1551,683
+Pos=245,86
+Size=1359,616
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -37,8 +36,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=369,52
-Size=1551,32
+Pos=245,52
+Size=1359,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -294,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,740
-Size=367,317
+Pos=0,617
+Size=243,260
 Collapsed=0
 DockId=0x00000006,0
 
@@ -312,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1446,771
-Size=474,286
+Pos=1227,704
+Size=377,177
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=369,771
-Size=1075,286
+Pos=245,704
+Size=980,177
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65469,25 +65468,25 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Pos=112,187 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
     DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=367,829 Split=Y Selected=0x2E9237F7
+      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=243,829 Split=Y Selected=0x2E9237F7
         DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
         DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=226,260 Selected=0xF4B38336
-      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1551,829 Split=Y
+      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1355,829 Split=Y
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,706 Split=X Selected=0xF6FF0623
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,612 Split=X Selected=0xF6FF0623
               DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,286 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1075,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=474,248 Selected=0x2323D3E4
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,177 Split=X Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=977,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=376,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
