--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1080
+Size=1440,712
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=243,702
+Size=230,450
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,8 +26,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=245,86
-Size=1675,763
+Pos=232,86
+Size=1208,592
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=245,52
-Size=1675,32
+Pos=232,52
+Size=1208,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -53,12 +53,13 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-Pos=92,133
+ViewportPos=-505,-54
+ViewportId=0x3F10B7DE
 Size=700,73
 Collapsed=0
 
 [Window][Debug]
-ViewportPos=1867,-93
+ViewportPos=1421,-93
 ViewportId=0xAD6468A3
 Size=297,412
 Collapsed=0
@@ -294,8 +295,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,756
-Size=243,324
+Pos=0,504
+Size=230,208
 Collapsed=0
 DockId=0x00000006,0
 
@@ -312,8 +313,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1455,851
-Size=465,229
+Pos=1064,680
+Size=376,32
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +339,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=245,851
-Size=1208,229
+Pos=232,680
+Size=830,32
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65469,24 +65470,24 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=5,108 Size=1920,1028 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,77 Size=1440,660 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode              ID=0x00000012 Parent=0xF15DEC6E SizeRef=951,829 Split=X
     DockNode            ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=243,829 Split=Y Selected=0x2E9237F7
+      DockNode          ID=0x00000001 Parent=0x00000009 SizeRef=230,829 Split=Y Selected=0x2E9237F7
         DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=226,563 Selected=0x2E9237F7
         DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=226,260 Selected=0xF4B38336
-      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1355,829 Split=Y
+      DockNode          ID=0x00000002 Parent=0x00000009 SizeRef=1208,829 Split=Y
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,712 Split=X Selected=0xF6FF0623
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,592 Split=X Selected=0xF6FF0623
               DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,229 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=977,248 Selected=0xBF096F38
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,32 Split=X Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=830,248 Selected=0xBF096F38
               DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=376,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
     DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
