--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1440,712
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -313,8 +313,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1064,680
-Size=376,32
+Pos=1322,854
+Size=598,226
 Collapsed=0
 DockId=0x00000014,0
 
@@ -326,7 +326,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=1325,717
+Size=845,432
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -339,8 +339,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=232,680
-Size=830,32
+Pos=0,854
+Size=1320,226
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65216,7 +65216,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,1009
+Size=222,660
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65226,8 +65226,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1551,52
-Size=369,717
+Pos=1071,52
+Size=369,432
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65298,6 +65298,11 @@ Collapsed=0
 [Window][Add New Text to Button1]
 Pos=1024,402
 Size=180,92
+Collapsed=0
+
+[Window][Choose Directory##ChooseDir]
+Pos=276,140
+Size=768,348
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -65468,9 +65473,101 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xAE37F846,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA4DE81BC,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3BC3379A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0115B008,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x50FB94EA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0825A944,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x653476E5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x03590593,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x72229D1E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x353CED3B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x63CC57A5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6EE6747C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4868869C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5675D3FD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC21FBDFB,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEBC75F5A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC151C4E8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBFFD509C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE228865A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x99F9AA90,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x43DDD12F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBCAC3AD5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0C5CF3D0,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,77 Size=1440,660 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,1028 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -65483,10 +65580,10 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,77 Size=1440,660 S
         DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,592 Split=X Selected=0xF6FF0623
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,432 Split=X Selected=0xF6FF0623
               DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,32 Split=X Selected=0xBF096F38
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,226 Split=X Selected=0xBF096F38
               DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=830,248 Selected=0xBF096F38
               DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=376,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
