--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/devcontainers/cpp:ubuntu-24.04
 
 RUN sudo apt-get update \
- && sudo apt-get install -y xorg-dev
+ && sudo apt-get install -y xorg-dev \
+ && sudo apt-get install -y git-lfs
