--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1440,712
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=230,450
+Size=230,566
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=232,86
-Size=1208,272
+Size=1372,441
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=232,52
-Size=1208,32
+Size=1372,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -53,14 +53,12 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-ViewportPos=-505,-54
-ViewportId=0x3F10B7DE
+Pos=179,225
 Size=700,73
 Collapsed=0
 
 [Window][Debug]
-ViewportPos=1421,-93
-ViewportId=0xAD6468A3
+Pos=1048,156
 Size=297,412
 Collapsed=0
 
@@ -295,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,504
-Size=230,208
+Pos=0,620
+Size=230,261
 Collapsed=0
 DockId=0x00000006,0
 
@@ -313,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1064,360
-Size=376,352
+Pos=1172,525
+Size=428,352
 Collapsed=0
 DockId=0x00000014,0
 
@@ -326,7 +324,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=224,52
-Size=845,306
+Size=1005,471
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -339,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=232,360
-Size=830,352
+Pos=224,525
+Size=946,352
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65216,7 +65214,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,52
-Size=222,660
+Size=222,825
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65226,8 +65224,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1071,52
-Size=369,306
+Pos=1231,52
+Size=369,471
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65301,7 +65299,7 @@ Size=180,92
 Collapsed=0
 
 [Window][Choose Directory##ChooseDir]
-Pos=-27,139
+Pos=208,129
 Size=768,348
 Collapsed=0
 
@@ -65581,9 +65579,33 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x6E08BF23,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x27377936,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBBB7B137,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEAC93F94,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF831566A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x72E35ADF,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,77 Size=1440,660 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -65597,7 +65619,7 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,77 Size=1440,660 S
         DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
           DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,272 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 Selected=0xBDDC88E0
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=1005,575 CentralNode=1 Selected=0xF6FF0623
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=369,575 Selected=0xFC56E895
             DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,352 Split=X Selected=0xBF096F38
               DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=830,248 Selected=0xBF096F38
