--- a/imgui.ini
+++ b/imgui.ini
@@ -65679,6 +65679,38 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xC0159509,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x79998FB0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x66B7009E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBE1F7769,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB33A6F29,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE6941D07,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE81588A5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD6A77539,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=303,78 Size=1920,1028 Split=X Selected=0xBDDC88E0
