feat_end: Infinite grid in SceneVisualizerPanel

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1920,1057
+Pos=0,0
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=230,686
+Size=230,702
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=232,86
-Size=1688,617
+Size=1688,640
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -292,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,740
-Size=230,317
+Pos=0,756
+Size=230,324
 Collapsed=0
 DockId=0x00000006,0
 
@@ -310,7 +311,7 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1394,705
+Pos=1394,728
 Size=526,352
 Collapsed=0
 DockId=0x00000014,0
@@ -336,7 +337,7 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=232,705
+Pos=232,728
 Size=1160,352
 Collapsed=0
 DockId=0x00000013,0
@@ -65716,7 +65717,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=5,108 Size=1920,1028 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=222,829 Split=Y Selected=0x09C8B3D2
     DockNode            ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode            ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
